--- a/AspCoreWeb/AspCoreWeb.csproj
+++ b/AspCoreWeb/AspCoreWeb.csproj
@@ -13,6 +13,7 @@
     <None Include="..\Linux_x64\libGcmAes.so" Link="libGcmAes.so">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="..\README.md" Link="README.md" />
   </ItemGroup>
 
   <ItemGroup>
