Key and IV generation working. Must install ref-napi and ffi-napi modules using npm

--- a/NodeJs/package.json
+++ b/NodeJs/package.json
@@ -1,8 +1,17 @@
 {
     "name": "NodeJs",
     "version": "1.0.0",
-    "keywords": ["util", "functional", "server", "client", "browser"],
+    "keywords": [
+        "util",
+        "functional",
+        "server",
+        "client",
+        "browser"
+    ],
     "author": "kmushtaq",
     "contributors": [],
-    "dependencies": {}
+    "dependencies": {
+        "ffi-napi": "^4.0.3",
+        "ref-napi": "^3.0.3"
+    }
 }
